...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="36dp"
        android:text="Memory Content"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/txtMovie"
        android:layout_width="wrap_content"
...
        android:onClick="backBlue"
        android:text="Blue"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="fontChange1"
        android:text="Calibri"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
...
        android:text="Old English"
        app:layout_constraintBottom_toTopOf="@+id/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textAnimal" />

    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="5dp"
        android:onClick="fontChange3"
        android:text="Harlows (Italics)"
        app:layout_constraintBottom_toBottomOf="@+id/textColor"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <EditText
        android:id="@+id/editText"
...
